welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: ';' expected but ')' found.
	ch.tiInt(litMessageSol()))
                                 ^