welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
	var T = new Array [Color](getWorldHeight())
	
	if(!estFaceMur){
		for (i <- 0 to (getWorldHeight()-2)) {
		T(i) = getCouleurSol();
		avance();
		}
	}
	if(estFaceMur){
		for (i <- 0 to (getWorldHeight()-2)){
		recule();
	}
	}
	gauche();avance();droite();
	ch.tiInt(litMessageSol()))

for (k<-1 to getWorldHeight()-2){	
                for (j<-1 to getWorldHeight()){
    	                    setCouleurBrosse(T((j+ch.tiInt(litMessageSol())))%((getWorldHeight()))));
                        	if(getCouleurSol()==T((getWorldHeight()-1))){
                                	leveBrosse();avance();gauche();avance();droite();avance();baisseBrosse();
                                          	}else{
                                        		avance();	
                                             	}
                                   	}
                         	}
                           for (j<-1 to getWorldHeight()){
    	                    setCouleurBrosse(T((j-1)%((getWorldHeight()))));
                        	if(getCouleurSol()==T((getWorldHeight()-1))){
                                	leveBrosse();avance();
                                          	}else{
                                        		avance;	
                                             	}
                                   	}




	
}
